--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+}
+
+/*
+body::-webkit-scrollbar {
+  width: 0;
+}
+*/
+
+app-charts {
+  scroll-behavior: smooth;
+}
