--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -22,7 +22,9 @@
 </div>
 
 <div #first id="first" class="firstPart">
-  <h2>FIRST PART</h2>
+  <div class="titlePart">
+    <h2 id="firstTitle">FIRST PART</h2>
+  </div>
   <canvas id="canvas">{{ chart }}</canvas>
 </div>
 
