--- a/src/app/charts/charts.component.scss
+++ b/src/app/charts/charts.component.scss
@@ -44,7 +44,7 @@
 .btnBar {
   position: fixed;
   right: 15px;
-  top: 40%;
+  top: calc(50% - 80px / 2);
 
   ul {
     li {
@@ -73,8 +73,15 @@
   height: 100vh;
   max-height: 100vh;
 
-  h2 {
-    margin: 0;
+  .titlePart {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    h2 {
+      width: fit-content;
+      margin: 0;
+    }
   }
 
   canvas {
