add pie chart to page

--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -25,13 +25,22 @@
   <div class="titlePart">
     <h2 id="firstTitle">FIRST PART</h2>
   </div>
-  <canvas id="canvas">{{ chart }}</canvas>
+  <div class="canvasPart">
+    <canvas id="firstCanvas">{{ firstChart }}</canvas>
+  </div>
 </div>
 
 <div #second id="second" class="secondPart">
-  <h2>SECOND PART</h2>
+  <div class="titlePart">
+    <h2>SECOND PART</h2>
+  </div>
+  <div class="canvasPart">
+    <canvas id="secondCanvas">{{ secondChart }}</canvas>
+  </div>
 </div>
 
 <div #third id="third" class="thirdPart">
-  <h2>THIRD PART</h2>
+  <div class="titlePart">
+    <h2>THIRD PART</h2>
+  </div>
 </div>
