--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -25,6 +25,10 @@
   <div class="titlePart">
     <h2 id="firstTitle">FIRST PART</h2>
   </div>
+  <div class="btnPart">
+    <button><span>btn1</span></button>
+    <button>btn1</button>
+  </div>
   <div class="canvasPart">
     <canvas id="firstCanvas">{{ firstChart }}</canvas>
   </div>
