--- a/src/app/charts/charts.component.scss
+++ b/src/app/charts/charts.component.scss
@@ -82,8 +82,63 @@
     height: 10%;
 
     h2 {
+      font-family: 'Lato', sans-serif;
+      color: black;
       width: fit-content;
       margin: 0;
+    }
+  }
+
+  .btnPart {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 10%;
+
+    button {
+      margin: 0 15px;
+      padding: 5px 25px;
+      border-radius: 5px;
+      background-color: white;
+      color: white;
+      text-transform: uppercase;
+      font-size: 12px;
+      transition: all 1s;
+      cursor: pointer;
+      display: inline-block;
+      position: relative;
+      overflow: hidden;
+      border: 1px solid black;
+
+      span {
+        color: white;
+        z-index: 1;
+      }
+
+      &:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        background-position: center;
+        transition: all 1s;
+        border-radius: 50%;
+        transform: scale(2, 5);
+      }
+      
+      &:hover {
+        span {
+          color: black;
+        }
+
+        &:before {
+          transition: all 1s;
+          transform: scale(0, 0);
+        }
+      }
     }
   }
 
@@ -92,7 +147,7 @@
     align-items: center;
     justify-content: center;
 
-    height: 90%;
+    height: 80%;
 
     canvas {
       max-height: 90%;
